add table with graphs

--- a/journal.tex
+++ b/journal.tex
@@ -569,6 +569,8 @@ $\begin{pmatrix}
 %
 % \end{table}
 
+\input{tablewithgraphs}
+
 \bibliographystyle{amsplain}
 \bibliography{bib/books,bib/papers}
 
