--- a/tablewithgraphs.tex
+++ b/tablewithgraphs.tex
@@ -9,9 +9,9 @@ digraph G {
 d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
-1 -> 1 [topath="loop above"];;
-2 -> 2 [topath="loop above"];;
-3 -> 3 [topath="loop above"];;
+1 -> 1 [topath="loop above"];
+2 -> 2 [topath="loop above"];
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 3 & 0 & 0.499 & 0.126\\
@@ -23,9 +23,9 @@ d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 1 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 4 & 1 & 0.505 & 0.121\\
@@ -36,10 +36,10 @@ digraph G {
 d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
-1 -> 1 [topath="loop above"];;
-2 -> 2 [topath="loop above"];;
+1 -> 1 [topath="loop above"];
+2 -> 2 [topath="loop above"];
 3 -> 2;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 4 & 0 & 0.622 & 0.127\\
@@ -51,10 +51,10 @@ d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 5 & 1 & 0.595 & 0.121\\
@@ -66,7 +66,7 @@ d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
 2 -> 3;
@@ -84,7 +84,7 @@ edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 3 -> 1;
 3 -> 2;
 1 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 5 & 2 & 0.41 & 0.061\\
@@ -96,10 +96,10 @@ d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 2 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 5 & 1 & 0.43 & 0.078\\
@@ -112,9 +112,9 @@ node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 2 -> 1;
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 1 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 5 & 1 & 0.605 & 0.12\\
@@ -127,7 +127,7 @@ node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 2 -> 1;
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
 }
@@ -140,11 +140,11 @@ digraph G {
 d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
-1 -> 1 [topath="loop above"];;
+1 -> 1 [topath="loop above"];
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 5 & 0 & 0.698 & 0.122\\
@@ -155,11 +155,11 @@ digraph G {
 d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
-1 -> 1 [topath="loop above"];;
-2 -> 2 [topath="loop above"];;
+1 -> 1 [topath="loop above"];
+2 -> 2 [topath="loop above"];
 3 -> 2;
 2 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 5 & 1 & 0.587 & 0.128\\
@@ -170,11 +170,11 @@ digraph G {
 d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
-1 -> 1 [topath="loop above"];;
+1 -> 1 [topath="loop above"];
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 2 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 5 & 0 & 0.707 & 0.127\\
@@ -186,11 +186,11 @@ d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
 2 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 6 & 2 & 0.578 & 0.121\\
@@ -206,7 +206,7 @@ edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 3 -> 2;
 1 -> 3;
 2 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 6 & 3 & 0.487 & 0.081\\
@@ -219,10 +219,10 @@ node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 2 -> 1;
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 6 & 2 & 0.543 & 0.098\\
@@ -234,11 +234,11 @@ d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 2 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
 2 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 6 & 2 & 0.501 & 0.088\\
@@ -251,10 +251,10 @@ node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 2 -> 1;
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 1 -> 3;
 2 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 6 & 1 & 0.662 & 0.123\\
@@ -267,7 +267,7 @@ node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 2 -> 1;
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
 2 -> 3;
@@ -284,9 +284,9 @@ edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 2 -> 1;
 3 -> 1;
 1 -> 2;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 1 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 6 & 2 & 0.583 & 0.13\\
@@ -297,12 +297,12 @@ digraph G {
 d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
-1 -> 1 [topath="loop above"];;
+1 -> 1 [topath="loop above"];
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 2 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 6 & 1 & 0.659 & 0.124\\
@@ -313,12 +313,12 @@ digraph G {
 d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
-1 -> 1 [topath="loop above"];;
+1 -> 1 [topath="loop above"];
 2 -> 1;
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 6 & 0 & 0.751 & 0.124\\
@@ -329,12 +329,12 @@ digraph G {
 d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
-1 -> 1 [topath="loop above"];;
+1 -> 1 [topath="loop above"];
 2 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 6 & 1 & 0.604 & 0.097\\
@@ -347,11 +347,11 @@ node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 2 -> 1;
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
 2 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 7 & 3 & 0.564 & 0.103\\
@@ -368,7 +368,7 @@ edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 3 -> 2;
 1 -> 3;
 2 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 7 & 5 & 0.475 & 0.068\\
@@ -382,10 +382,10 @@ edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 2 -> 1;
 3 -> 1;
 1 -> 2;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 7 & 3 & 0.591 & 0.108\\
@@ -396,13 +396,13 @@ digraph G {
 d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
-1 -> 1 [topath="loop above"];;
+1 -> 1 [topath="loop above"];
 2 -> 1;
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 2 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 7 & 1 & 0.717 & 0.119\\
@@ -413,13 +413,13 @@ digraph G {
 d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
-1 -> 1 [topath="loop above"];;
+1 -> 1 [topath="loop above"];
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
 2 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 7 & 2 & 0.648 & 0.122\\
@@ -430,13 +430,13 @@ digraph G {
 d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
-1 -> 1 [topath="loop above"];;
+1 -> 1 [topath="loop above"];
 2 -> 1;
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 7 & 2 & 0.627 & 0.105\\
@@ -450,11 +450,11 @@ edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
 2 -> 1;
 3 -> 1;
 1 -> 2;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
 2 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 8 & 5 & 0.577 & 0.093\\
@@ -465,14 +465,14 @@ digraph G {
 d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
-1 -> 1 [topath="loop above"];;
+1 -> 1 [topath="loop above"];
 2 -> 1;
 3 -> 1;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
 2 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 8 & 3 & 0.639 & 0.109\\
@@ -483,15 +483,15 @@ digraph G {
 d2ttikzedgelabels = true;
 node [style="state"];
 edge [lblstyle="auto",topath="bend left",style="line width=1.5pt"];
-1 -> 1 [topath="loop above"];;
+1 -> 1 [topath="loop above"];
 2 -> 1;
 3 -> 1;
 1 -> 2;
-2 -> 2 [topath="loop above"];;
+2 -> 2 [topath="loop above"];
 3 -> 2;
 1 -> 3;
 2 -> 3;
-3 -> 3 [topath="loop above"];;
+3 -> 3 [topath="loop above"];
 }
 \end{dot2tex}
 \end{tikzpicture} & 9 & 5 & 0.638 & 0.106\\
