--- a/tex/tablewithgraphs.tex
+++ b/tex/tablewithgraphs.tex
@@ -1,3 +1,4 @@
+%!TEX root = ../paper.tex
 \begin{longtable}{ c || c | c | c | c }
 \hline
 matrix & connectivity & cycle number & \specialcell{probability of stability\\to perturbation} & probability of stability\\
